# accumulative-leaderboard

./: Anchor.toml  Cargo.toml  package-lock.json  package.json
programs/accumulative_leaderboard/: Cargo.toml
programs/accumulative_leaderboard/src/: lib.rs
programs/progresive-leadboard/: Cargo.toml
programs/progresive-leadboard/src/: lib.rs
tests/: init_leaderboard.ts  play.ts
web_client/: manifest.json  package-lock.json  package.json
web_client/src/: manifest.json  types.ts
web_client/src/components/: leaderboard.js  leaderboard.tsx
web_client/src/components/Dice/: index.tsx
web_client/src/pages/: _app.tsx  _document.tsx  index.js  index.tsx  leaderboard.js
web_client/src/utils/: acumulative_leaderboard.json  useProgram.ts
