[package]
name = "acumulative_leaderboard"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "acumulative_leaderboard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {anchor-lang = "0.29.0", features = ["init-if-needed"]}
anchor-spl = {anchor-spl = "0.29.0", features= ["metadata"]}
